--- a/style/feeds_page.css
+++ b/style/feeds_page.css
@@ -203,3 +203,143 @@ body {
     float: right;
     width: 100%;
 }
+
+.main-container .left-column .dropdown-list .list-group-item {
+    background-color: transparent;
+    font-size: 110%;
+    border: 0px;
+}
+
+.main-container .left-column .dropdown-list .list-group-item .list-icon {
+    vertical-align: baseline;
+    font-size: 120%;
+}
+
+.main-container .left-column .dropdown-list .list-group-item .on-hover-show a {
+    color: #000;
+    text-decoration: none;
+    border-radius: 30px;
+}
+
+.main-container .left-column .dropdown-list .list-group-item .on-hover-show a:hover {
+    background-color: rgba(41, 128, 185, 0.2);
+    color: #1DA1F2;
+}
+
+.main-container .left-column .dropdown-list .list-group-item .on-hover-show a:active {
+    background-color: black;
+}
+
+.main-container .left-column .dropdown-list .list-group-item .on-hover-show a:visited {
+    background-color: rgba(41, 128, 185, 0.2);
+}
+
+.custom-border {
+    border-right: 1px solid rgba(236, 240, 241, 1);
+    border-left: 1px solid rgba(236, 240, 241, 1);
+}
+
+.custom-border-bottom {
+    border-bottom: 1px solid rgba(236, 240, 241, 1);
+}
+
+.main-container .middle-column .middle-upper-layer {
+    border-bottom: 12px solid rgba(236, 240, 241, 1);
+}
+
+.main-container .middle-column .middle-upper-layer textarea {
+    padding: 15px;
+
+}
+
+.main-container .middle-column .middle-upper-layer .emoji-picker-icon {
+    color: black;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.input-type-dec {
+    padding: 15px;
+    width: 100%;
+    outline: none;
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    border-style: none;
+    resize: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    color:#1DA1F2
+}
+
+.input-type-dec:focus,
+.input-type-dec:active,
+.input-type-dec:hover {
+    color: black;
+    border: transparent;
+    background-color: transparent;
+    outline: 0px !important;
+    -webkit-appearance: none;
+    box-shadow: none !important;
+}
+
+.input-type-dec1 {
+    padding: 15px;
+    width: 100%;
+    outline: none;
+    background-color: transparent;
+    border-radius: 30px;
+    border: 1px solid rgba(41, 128, 185, 1);
+
+}
+
+.tweet-buttons {
+    background: none;
+    border: 0px;
+    padding: 5px 10px 5px 10px;
+}
+
+.retweet-icon {
+    border-radius: 50px;
+    padding: 5px 10px 5px 10px;
+}
+
+.tweet-buttons:hover .retweet-icon {
+    color: rgba(26, 188, 156, 1);
+    background-color: rgba(26, 188, 156, 0.1);
+
+}
+
+.edit-icon {
+    border-radius: 50px;
+    padding: 5px 10px 5px 10px;
+}
+
+.tweet-buttons:hover .edit-icon {
+    color: rgba(241, 196, 15, 1);
+    background-color: rgba(241, 196, 15, 0.1);
+
+}
+
+.love-icon {
+    border-radius: 50px;
+    padding: 5px 10px 5px 10px;
+}
+
+.tweet-buttons:hover .love-icon {
+    color: rgba(192, 57, 43, 1);
+    background-color: rgba(192, 57, 43, 0.1);
+
+}
+
+.comment-icon {
+    border-radius: 50px;
+    padding: 5px 10px 5px 10px;
+}
+
+.tweet-buttons:hover .comment-icon {
+    color: rgba(52, 152, 219, 1);
+    background-color: rgba(52, 152, 219, 0.1);
+
+}
