--- a/style/feeds_page.css
+++ b/style/feeds_page.css
@@ -306,7 +306,7 @@ body {
 
 .tweet-buttons:hover .retweet-icon {
     color: rgba(26, 188, 156, 1);
-    background-color: rgba(26, 188, 156, 0.1);
+    /* background-color: rgba(26, 188, 156, 0.1); */
 
 }
 
