--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
         </tr>
         <tr>
           <td>
-            <h3>Enter your ID code and click on the 'sign in' button below.</h3>
+            <h3>Enter your User Name and click on the 'sign in' button below.</h3>
           </td>
         </tr>
         <tr>
