image upload error and env

--- a/views/feeds_page.ejs
+++ b/views/feeds_page.ejs
@@ -962,8 +962,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/emoji-picker/1.1.5/js/util.js"
             integrity="sha256-e8g2hYx3+F2EpHQkgsrqE2bFSRcmCPt9tH2OBkr8O+8=" crossorigin="anonymous"></script>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/emoji-picker/1.1.5/js/emoji-picker.js.map"
-            integrity="undefined" crossorigin="anonymous"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/emoji-picker/1.1.5/js/emoji-picker.js.map"
+            integrity="undefined" crossorigin="anonymous"></script> -->
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/emoji-picker/1.1.5/js/jquery.emojiarea.js"
             integrity="sha256-/bDNB+kJN2OZmomHgEiAQp1yZZQzYWc3cs19/5EbkPo=" crossorigin="anonymous"></script>
