removed static image preview url

--- a/views/feeds_page.ejs
+++ b/views/feeds_page.ejs
@@ -948,7 +948,7 @@
                 <div class="modal-body">
                     <div aria-label="Image" class="post-image-full-wrapper">
                         <img alt="Image" draggable="true"
-                            src="https://pbs.twimg.com/media/Ean-0rzU4AA6Soz?format=jpg&amp;name=large"
+                            src=""
                             class="image-css-9pa8cd">
                     </div>
                 </div>
