--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -56,16 +56,16 @@ setTimeout(() => {
 window.location.href = `${window.location.origin}/users/home`;
 }, 500)
 
-if (!post || post.post_type != 'tweet') return;
+// if (!post || post.post_type != 'tweet') return;
 
-let post_image = null;
-if (post.image != "null") {
-post_image = <div class="post-img-wrapper"> <span class="post-image" id="pst-image" data-toggle="modal" data-target="#postImageModal" onclick="previewPostImage(this)" style="background-image: url('${post.image}')"></span> </div>;
-} else {
-post_image = <div style='display:none;'></div>;
-}
-//$('.all-posts').prepend(p);
-//$('.empty-view-container').hide();
+// let post_image = null;
+// if (post.image != "null") {
+// post_image = <div class="post-img-wrapper"> <span class="post-image" id="pst-image" data-toggle="modal" data-target="#postImageModal" onclick="previewPostImage(this)" style="background-image: url('${post.image}')"></span> </div>;
+// } else {
+// post_image = <div style='display:none;'></div>;
+// }
+// //$('.all-posts').prepend(p);
+// //$('.empty-view-container').hide();
 });
 </script>
 
